<resources>
    <string name="app_name">Storesy</string>

    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="conf_pwd">Confirm Password</string>
    <string name="sign_out">Sign Out</string>

    <!-- Navigation Strings -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="verify_your_email">Verify your email</string>
    <string name="desc_verify_email">Click on the Button below to get the Verification link on your given email</string>
    <string name="desc_email_verification">Please click on the link sent on your email and come again to verify your account</string>
    <string name="desc_reset_pwd_mail_sent">Email Sent Successfully, please use the link provided in email to reset your password.</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="see_all">See All</string>
    <string name="prod_name">Product Name</string>
    <string name="prod_img">Product Image</string>
</resources>