<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    android:padding="16dp"
    tools:context=".Fragments.SignUpFragment">

    <ImageButton
        android:id="@+id/img_btn_sign_in_guest"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/off_white"
        android:padding="8dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="contentDescription,SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/sign_up_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/heading"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                app:boxStrokeColor="@color/light_black"
                app:hintTextColor="@color/light_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/first_name"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                app:boxStrokeColor="@color/light_black"
                app:hintTextColor="@color/light_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/last_name"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/light_black"
            app:hintTextColor="@color/light_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:fontFamily="@font/poppins"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/light_black"
            app:hintTextColor="@color/light_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/pwd"
                android:fontFamily="@font/poppins"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/light_black"
            app:hintTextColor="@color/light_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_conf_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/conf_pwd"
                android:fontFamily="@font/poppins"
                android:hint="@string/conf_pwd"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/light_black"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="32dp"
            android:paddingVertical="12dp"
            android:text="@string/sign_up"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Already have an Account?"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/btn_goto_sign_in_frag"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/purple_700" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>